--- a/src/drivers/gps/CMakeLists.txt
+++ b/src/drivers/gps/CMakeLists.txt
@@ -43,7 +43,8 @@ px4_add_module(
 		devices/src/mtk.cpp
 		devices/src/ashtech.cpp
 		devices/src/ubx.cpp
-		devices/src/rtcm.cpp
+		devices/src/ubx_rec.cpp
+		#devices/src/rtcm.cpp
 	MODULE_CONFIG
 		module.yaml
 	DEPENDS
