--- a/.gitmodules
+++ b/.gitmodules
@@ -32,16 +32,16 @@
 	branch = master
 [submodule "src/lib/ecl"]
 	path = src/lib/ecl
-	url = https://github.com/PX4/ecl.git
-	branch = master
+	url = https://github.com/Toothsmile/ecl.git
+	branch = v1.9.0-alpha-sjj
 [submodule "boards/atlflight/cmake_hexagon"]
 	path = boards/atlflight/cmake_hexagon
 	url = https://github.com/ATLFlight/cmake_hexagon.git
 	branch = master
 [submodule "src/drivers/gps/devices"]
 	path = src/drivers/gps/devices
-	url = https://github.com/PX4/GpsDrivers.git
-	branch = master
+	url = https://github.com/Toothsmile/GpsDrivers.git
+	branch = add_gps_ubx_rec_v1.9.0
 [submodule "src/modules/micrortps_bridge/micro-CDR"]
 	path = src/modules/micrortps_bridge/micro-CDR
 	url = https://github.com/eProsima/micro-CDR.git
