--- a/.gitmodules
+++ b/.gitmodules
@@ -40,8 +40,8 @@
 	branch = master
 [submodule "src/drivers/gps/devices"]
 	path = src/drivers/gps/devices
-	url = https://github.com/PX4/GpsDrivers.git
-	branch = master
+	url = https://github.com/Toothsmile/GpsDrivers.git
+	branch = add_gps_ubx_rec_v1.9.0
 [submodule "src/modules/micrortps_bridge/micro-CDR"]
 	path = src/modules/micrortps_bridge/micro-CDR
 	url = https://github.com/eProsima/micro-CDR.git
